- Implemented: Blinds T1 till T13 new supports the Stop button
- Implemented: Devices, Log icon for Blinds
- Implemented: Blockly/Lua Set SetPoint option
- Implemented: I2C BME280 sensor (temp+hum+baro)
- Implemented: Netatmo Home Coach support
- Implemented: Notification for Dummy Soil/Moisture sensor
- Implemented: Notification for Alert Sensor via udevice JSON call
- Implemented: Option to replace an Meter device
- Implemented: RFXtrx Lucci Fan implemented
- Implemented: RFXtrx RFY2 protocol implemented
- Implemented: RFXtrx Kangtai / Cotech implemented
- Implemented: Timer Plan editor

Version 3.5878 (November 10th 2016)
- Fixes and various improvements

Version 3.5837 (October 30th 2016)
- Fixed: Blockly/Lua, FOR and RANDOM are now again in minutes
- Changed: Shortlog charts for Temperature, Current and Smartlog are now using a spline
- Changed: Lua/Blockly, Notifications are now not blocking

Version 3.5834 (October 29th 2016)
- Implemented: TSL2561 illuminance I2C sensor (ldrolez)
- Implemented: AccuWeather support
- Implemented: Air Quality graph, Avarage and Previous month/year
- Implemented: Atag One Thermostat support
- Implemented: Blockly/Lua Camera device, to send camera snapshots with subject after xx seconds
- Implemented: Blockly upgraded to latest version (fixed and cleaned some code as well), this fixes problem with long sensor lists
- Implemented: Blockly, option to excecute a script in the DO statement
- Implemented: Custom Sensor
- Implemented: Denkovi Smartden with LAN Interface
- Implemented: Devices Tab, Log icon for Pressure
- Implemented: Dust Sensor (ug/m3)
- Implemented: Error Log, option to send error logs by email
- Implemented: Hourly rainrate for all rain sensors
- Implemented: MySensors, Implemented Acknowledge Timeout per Child sensor
- Implemented: MySensors, S_WATER_QUALITY, water PH
- Implemented: MySensors, S_WATER_QUALITY, water ORP redox potential in mV