@@ -54,23 +54,21 @@ COpenWeatherMap::COpenWeatherMap(const int ID, const std::string &APIKey, const 
 	m_Location(Location),
 	m_Language("en")
 {
-	_log.Log(LOG_STATUS, "OpenWeatherMap: Create instance");
 	m_HwdID=ID;
 	m_stoprequested=false;
+
+	m_bHaveGPSCoordinated = (Location.find("lat=") != std::string::npos);
+
 
 	std::string sValue;
 	if (m_sql.GetPreferencesVar("Language", sValue))
 	{
 		m_Language = sValue;
-#ifdef DEBUG_OPENWEATHERMAP
-		_log.Log(LOG_STATUS, "OpenWeatherMap: Language set to %s", sValue.c_str());
-#endif
 	}
 }
 
 COpenWeatherMap::~COpenWeatherMap(void)
 {
-	_log.Log(LOG_STATUS, "OpenWeatherMap: Destroy instance");
 }
 
 bool COpenWeatherMap::StartHardware()
@@ -78,6 +76,7 @@ bool COpenWeatherMap::StartHardware()
 	m_thread = boost::shared_ptr<boost::thread>(new boost::thread(boost::bind(&COpenWeatherMap::Do_Work, this)));
 	m_bIsStarted=true;
 	sOnConnected(this);
+	_log.Log(LOG_STATUS, "OpenWeatherMap: Started");
 	return (m_thread!=NULL);
 }
 
@@ -90,7 +89,7 @@ bool COpenWeatherMap::StopHardware()
 		m_thread->join();
 	}
     m_bIsStarted=false;
-    return true;
+	return true;
 }
 
 void COpenWeatherMap::Do_Work()
@@ -133,7 +132,10 @@ void COpenWeatherMap::GetMeterDetails()
 	std::string sResult;
 	std::stringstream sURL;
 
-	sURL << "http://api.openweathermap.org/data/2.5/weather?q=" << m_Location << "&APPID=" << m_APIKey << "&units=metric" << "&lang=" << m_Language;
+	sURL << "http://api.openweathermap.org/data/2.5/weather?";
+	if (!m_bHaveGPSCoordinated)
+		sURL << "q=";
+	sURL << m_Location << "&APPID=" << m_APIKey << "&units=metric" << "&lang=" << m_Language;
 	
 #ifdef DEBUG_OPENWEATHERMAP
 	_log.Log(LOG_STATUS, "OpenWeatherMap: Get data from %s", sURL);
@@ -158,9 +160,6 @@ void COpenWeatherMap::GetMeterDetails()
 
 #ifdef DEBUG_OPENWEATHERMAP_WRITE
 	SaveString2Disk(sResult, "E:\\OpenWeatherMap.json");
-#endif
-#ifdef DEBUG_OPENWEATHERMAP
-	_log.Log(LOG_STATUS, "OpenWeatherMap: Parsing json");
 #endif
 
 	Json::Value root;
