@@ -18,6 +18,7 @@ private:
 	std::string m_Location;
 	std::string m_ForecastURL;
 	std::string m_Language;
+	bool m_bHaveGPSCoordinated;
 	volatile bool m_stoprequested;
 	boost::shared_ptr<boost::thread> m_thread;
 
